RESOLVED FIXED52160
WebKitTestRunner uses crazy amounts of CPU, making layout tests slow and flaky
https://bugs.webkit.org/show_bug.cgi?id=52160
Summary WebKitTestRunner uses crazy amounts of CPU, making layout tests slow and flaky
Maciej Stachowiak
Reported 2011-01-10 11:33:41 PST
WebKitTestRunner uses crazy amounts of CPU, making layout tests slow and flaky
Attachments
Patch (1.56 KB, patch)
2011-01-10 11:38 PST, Maciej Stachowiak
andersca: review+
Maciej Stachowiak
Comment 1 2011-01-10 11:38:59 PST
Maciej Stachowiak
Comment 2 2011-01-10 12:01:02 PST
Note You need to log in before you can comment on or make changes to this bug.