2011-01-10  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Anders Carlsson.

        WebKitTestRunner uses crazy amounts of CPU, making layout tests slow and flaky
        https://bugs.webkit.org/show_bug.cgi?id=52160

        * WebKitTestRunner/mac/TestControllerMac.mm:
        (WTR::TestController::platformRunUntil): Instead of busy-looping, wait for the timeout.
        Anything that can make runUntil() conditions turn true will happen on a run loop cycle
        anyway.


Canonical link: https://commits.webkit.org/65715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75401 268f45cc-cd09-0410-ab3c-d52691b4dbfc